--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,6 @@ crashlytics-build.properties
 
 # Packages except manifest and packages-lock
 /[Aa]ssets/[Pp]ackages/*
+/[Pp]ackages/*
 !manifest.json
 !packages-lock.json
