feat: add auto setup ArmIk.

--- a/Assets/Scripts/VioletSolver/VioletSolver.asmdef
+++ b/Assets/Scripts/VioletSolver/VioletSolver.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "Unity.Animation.Rigging",
         "VRM",
-        "UniTask"
+        "UniTask",
+        "RootMotion",
+        "R3.Unity"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
