chore: add Plugin directory to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ crashlytics-build.properties
 /[Pp]ackages/*
 !manifest.json
 !packages-lock.json
+
+# Plugins
+/[Aa]ssets/Plugins/
+/[Aa]ssets/Plugins.meta
