--- a/Assets/Development/VioletSolver.Development.asmdef
+++ b/Assets/Development/VioletSolver.Development.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "VioletSolver.Development",
-    "rootNamespace": "",
+    "rootNamespace": "VioletSolver.Development",
     "references": [
         "GUID:17e83ec02bf75d441b1b742a85b6af46"
     ],
