feat: add overriding motion from typing motion generator

--- a/Assets/VioletSolver/Runtime/VioletSolver.asmdef
+++ b/Assets/VioletSolver/Runtime/VioletSolver.asmdef
@@ -5,7 +5,8 @@
         "Unity.Animation.Rigging",
         "VRM",
         "UniTask",
-        "RootMotion"
+        "RootMotion",
+        "uOSC.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
