chore: remove unnecessary dependency

--- a/Assets/VioletSolver/Runtime/VioletSolver.asmdef
+++ b/Assets/VioletSolver/Runtime/VioletSolver.asmdef
@@ -5,8 +5,7 @@
         "Unity.Animation.Rigging",
         "VRM",
         "UniTask",
-        "RootMotion",
-        "uOSC.Runtime"
+        "RootMotion"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
