chore: manage proto as UPM instead of submodule

--- a/Assets/VioletSolver/Runtime/VioletSolver.asmdef
+++ b/Assets/VioletSolver/Runtime/VioletSolver.asmdef
@@ -6,7 +6,7 @@
         "VRM",
         "UniTask",
         "RootMotion",
-        "HolisticProto"
+        "HumanLandmarks"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
