--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
-    "com.ec2k.humanlandmarks": "https://github.com/ec-k/HumanLandmarks.git",
+    "com.ec-k.humanlandmarks": "https://github.com/ec-k/HumanLandmarks.git",
     "com.ec2k.humanoidooseconnector": "https://github.com/ec-k/HumanoidPoseConnector.git?path=/Assets/HumanoidPoseConnector#v0.2.2",
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
     "com.hecomi.uosc": "https://github.com/hecomi/uOSC.git#upm",
