feat: adapt facial animation to VRM 1.0 specification

--- a/Assets/VioletSolver/Runtime/VioletSolver.asmdef
+++ b/Assets/VioletSolver/Runtime/VioletSolver.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "Unity.Animation.Rigging",
         "VRM",
+        "VRM10",
         "UniTask",
         "RootMotion",
         "HumanLandmarks"
