--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,7 @@
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.ec-k.humanlandmarks": "https://github.com/ec-k/HumanLandmarks.git",
-    "com.ec2k.humanoidooseconnector": "https://github.com/ec-k/HumanoidPoseConnector.git?path=/Assets/HumanoidPoseConnector#v0.2.2",
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
-    "com.hecomi.uosc": "https://github.com/hecomi/uOSC.git#upm",
     "com.ncdev.third-party-notices-generator": "https://github.com/chernyadev/third-party-notices-generator.git",
     "com.unity.animation.rigging": "1.2.1",
     "com.unity.collab-proxy": "2.7.1",
@@ -16,6 +14,7 @@
     "com.vrmc.gltf": "https://github.com/vrm-c/UniVRM.git?path=/Assets/UniGLTF#v0.126.0",
     "com.vrmc.univrm": "https://github.com/vrm-c/UniVRM.git?path=/Assets/VRM#v0.126.0",
     "com.vrmc.vrm": "https://github.com/vrm-c/UniVRM.git?path=/Assets/VRM10#v0.126.0",
+    "jp.hadashikick.vcontainer": "1.17.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -46,8 +45,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "jp.hadashikick.vcontainer": "1.17.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
