--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Copy Samples to package
         run: |
           mkdir -p Assets/VioletSolver/Samples~
-          cp -r Assets/Development/Samples/* Assets/VioletSolver/Samples~/
+          # Copy without .meta files (Package Manager generates new GUIDs on import)
+          rsync -av --exclude='*.meta' Assets/Development/Samples/ Assets/VioletSolver/Samples~/
           # Remove asmdef from Samples~ (not needed when imported via Package Manager)
           rm -f Assets/VioletSolver/Samples~/Scripts/VioletSolver.Samples.asmdef
-          rm -f Assets/VioletSolver/Samples~/Scripts/VioletSolver.Samples.asmdef.meta
 
       - name: Create release branch
         run: |
