--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,17 +4,19 @@
     "com.ec-k.humanlandmarks": "https://github.com/ec-k/HumanLandmarks.git",
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
     "com.ncdev.third-party-notices-generator": "https://github.com/chernyadev/third-party-notices-generator.git",
-    "com.unity.animation.rigging": "1.2.1",
-    "com.unity.collab-proxy": "2.7.1",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.textmeshpro": "3.0.7",
-    "com.unity.timeline": "1.7.7",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.4",
+    "com.unity.animation.rigging": "1.4.1",
+    "com.unity.collab-proxy": "2.11.3",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.multiplayer.center": "1.0.1",
+    "com.unity.timeline": "1.8.10",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.9",
     "com.vrmc.gltf": "https://github.com/vrm-c/UniVRM.git?path=/Assets/UniGLTF#v0.126.0",
     "com.vrmc.univrm": "https://github.com/vrm-c/UniVRM.git?path=/Assets/VRM#v0.126.0",
     "com.vrmc.vrm": "https://github.com/vrm-c/UniVRM.git?path=/Assets/VRM10#v0.126.0",
     "jp.hadashikick.vcontainer": "1.17.0",
+    "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -41,6 +43,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
